# survgame

./: Cargo.toml  build.rs
assets/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
src/: client.rs  common.rs  comms.rs  main.rs  server.rs  tests.rs  utils.rs  world.rs
src/client/: mod.rs  state.rs  types.rs
src/reng/: mod.rs  resources.rs  types.rs  utils.rs
src/reng/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
src/server/: mod.rs  state.rs
