[package]
name = "surv"
version = "0.1.0"
authors = ["Ian Graham Martinez <Ian.graham28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
wgpu = "0.6"
futures = "0.3"
winit = { version = "0.22", features = ["web-sys"] }
rand = "0.7"
image = "0.23"
cgmath = "0.17"
strum = "0.19"
strum_macros = "0.19"
fnv = "1.0.3"
bincode = "1.3"
serde = "1.0"
serde_derive = "1.0"

[features]
shaderc-build-from-source = ["shaderc/build-from-source"]
compile-shaders = ["shaderc"]

[build-dependencies]
shaderc= { version="0.6", optional=true } #requires git, python, ninja (on windows), & a c++11 compiler to be in path variable
